--- a/data/style.css
+++ b/data/style.css
@@ -1,22 +1,28 @@
 .sidebar {
-            height: 100vh;
-            background-color: #343a40;
-        }
-        .sidebar a {
-            color: #ffffff;
-            text-decoration: none;
-        }
-        .sidebar a:hover {
-            color: #ffffff;
-            text-decoration: none;
-            background-color: blue;
-        }
-        .profile-section {
-            margin-top: auto;
-        }
-        .line {
-            border-bottom: 1px solid grey;
-        }
-        .SuperButton {
-             border-radius:5px;
-        }
+    height: 100vh;
+    background-color: #343a40;
+}
+.sidebar a {
+    color: #ffffff;
+    text-decoration: none;
+}
+.sidebar a:hover {
+    color: #ffffff;
+    text-decoration: none;
+    background-color: blue;
+}
+.profile-section {
+    margin-top: auto;
+}
+.line {
+    border-bottom: 1px solid grey;
+}
+.SuperButton {
+    border-radius:5px;
+}
+.form-container {
+    max-width: 700px;
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 8px;
+}
